--- a/client/main.html
+++ b/client/main.html
@@ -1,4 +1,6 @@
 <head>
   <title>Meteor boilerplate</title>
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body></body>
